chore: Added improved visits listing and simplefied clinic staff roles
